# chladni-realistic-rendering

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeLists_simple.txt  CONTRIBUTING.md  EMOJI_PREVENTION.md  FEATURES_v1.2.0.md  GITHUB_SETUP.md  LICENSE  PERFORMANCE_GUIDE.md  PROFESSIONAL_STANDARDS.md  README.md  REALISTIC_RENDERING.md  check-emoji.sh  demo_realistic_rendering.cpp
.claude/: settings.local.json
.pre-commit-hooks/: emoji-detector.py
include/: cuda_memory_manager.h  debug_info.h  logger.h  realistic_renderer.h  shader_loader.h
shaders/: density_overlay.frag  density_overlay.vert  density_viz.comp  particle.frag  particle.vert  plate.frag  plate.vert
src/: cpu_simulation.cpp  logger.h  main.cpp  particle_physics.cu  simple_main.cpp
